--- a/src/app/modulos/admin/admin.component.html
+++ b/src/app/modulos/admin/admin.component.html
@@ -1,1 +1,9 @@
-<p>admin works!</p>
+<div id="main-wrapper">
+
+    <app-navbar></app-navbar>
+
+    <app-sidebar></app-sidebar>
+
+    <router-outlet></router-outlet>
+
+</div>
